--- a/vagrantfile
+++ b/vagrantfile
@@ -107,7 +107,7 @@ Vagrant.configure("2") do |config|
       end
   
       cent.vm.provision "shell", inline: <<-SHELL
-        dnf install -y snmpd tmux mc wget tree git
+        dnf install -y net-snmp tmux mc wget tree git
       SHELL
     end
   
