--- a/vagrantfile
+++ b/vagrantfile
@@ -131,7 +131,7 @@ Vagrant.configure("2") do |config|
   
       suse.vm.provision "shell", inline: <<-SHELL
         zypper --non-interactive refresh
-        zypper --non-interactive install snmpd tmux mc wget tree git
+        zypper --non-interactive install net-snmp tmux mc wget tree git
       SHELL
     end
   end
