--- a/vagrantfile
+++ b/vagrantfile
@@ -98,7 +98,7 @@ Vagrant.configure("2") do |config|
       cent.vm.network "private_network",
         ip: "10.10.10.133",
         netmask: "255.255.255.128",
-        virtualbox__intnet: "ansible_sinunimi"
+        virtualbox__intnet: "ansible_mihkel"
   
       cent.vm.provider "virtualbox" do |vb|
         vb.name = "mihkel-centos"
