ansible conf file ja muudatus vagrandis

--- a/vagrantfile
+++ b/vagrantfile
@@ -1,5 +1,6 @@
+#kasutan ssh-keysid kuna opensuse standardis ei taha paroolidega t66tada ning siis selle asemel, et seda muuta otsustasin v6tmete kasuks, kuna see on turvalisem.
 Vagrant.configure("2") do |config|
-    #--------------------------------------------------------------------------
+  #--------------------------------------------------------------------------
     # 1) Debian 12 Docker
     #--------------------------------------------------------------------------
     config.vm.define "mihkel-dockerhost" do |dockerhost|
@@ -17,9 +18,14 @@ Vagrant.configure("2") do |config|
         vb.cpus = 4
         vb.memory = 8192
       end
-  
+      dockerhost.vm.provision "file", 
+        source: "Keys/id_rsa.pub", 
+        destination: "/home/vagrant/id_rsa.pub"
       # Uuendused ja programmide installeerimnine
       dockerhost.vm.provision "shell", inline: <<-SHELL
+      #enne uuendusi kopeerin avaliku v6tme hilisemaks ligip22suks
+        cat /home/vagrant/id_rsa.pub >> /home/vagrant/.ssh/authorized_keys
+        rm /home/vagrant/id_rsa.pub
         apt-get update -y
         apt-get install -y snmpd tmux mc wget tree git \
                            ca-certificates curl gnupg2 \
@@ -56,11 +62,28 @@ Vagrant.configure("2") do |config|
         vb.memory = 2048
       end
   
-      # Ansible + tesised
+      #avaliku ja privaat v6tme kopeerimine
+      ansible.vm.provision "file", 
+        source: "Keys/id_rsa.pub", 
+        destination: "/home/vagrant/id_rsa.pub"
+      ansible.vm.provision "file", 
+        source: "Keys/id_rsa",
+        destination: "/home/vagrant/id_rsa"
+      #kopeerin kohe ka ansible playbookid sisse
+      config.vm.provision "file", source: "ansible", destination: "/home/vagrant/ansible"
+      #sama ka .ansible.cfg algselt on ilma punktita kuna muidu ei tahtnud ta github-i yles seda laadida
+      config.vm.provision "file", source: "ansible.cfg", destination: "/home/vagrant/.ansible.cfg"
+    # Uuendused ja programmide installeerimnine
       ansible.vm.provision "shell", inline: <<-SHELL
+    #enne uuendusi kopeerin avaliku v6tme hilisemaks ligip22suks
+        cat /home/vagrant/id_rsa.pub >> /home/vagrant/.ssh/authorized_keys
+        rm /home/vagrant/id_rsa.pub
+        mv /home/vagrant/id_rsa /home/vagrant/.ssh/is_rsa
+        chmod 600 /home/vagrant/.ssh/is_rsa #et v6tit kasutada peab tal olema 600 6igused, muidu loetakse seda ebaturvaliseks.
         apt-get update -y
         apt-get install -y snmpd tmux mc wget tree git \
                            sshpass ansible yamllint ansible-lint
+        ansible-galaxy collection install community.general #ansible core ei toeta zypper pkgmr-i
       SHELL
     end
   
@@ -82,7 +105,14 @@ Vagrant.configure("2") do |config|
         vb.memory = 2048
       end
   
+      ub.vm.provision "file", 
+        source: "Keys/id_rsa.pub", 
+        destination: "/home/vagrant/id_rsa.pub"
+    # Uuendused ja programmide installeerimnine
       ub.vm.provision "shell", inline: <<-SHELL
+    #enne uuendusi kopeerin avaliku v6tme hilisemaks ligip22suks
+        cat /home/vagrant/id_rsa.pub >> /home/vagrant/.ssh/authorized_keys
+        rm /home/vagrant/id_rsa.pub
         apt-get update -y
         apt-get install -y snmpd tmux mc wget tree git
       SHELL
@@ -105,8 +135,12 @@ Vagrant.configure("2") do |config|
         vb.cpus = 2
         vb.memory = 2048
       end
-  
+      cent.vm.provision "file", 
+        source: "Keys/id_rsa.pub", 
+        destination: "/home/vagrant/id_rsa.pub"
       cent.vm.provision "shell", inline: <<-SHELL
+        cat /home/vagrant/id_rsa.pub >> /home/vagrant/.ssh/authorized_keys
+        rm /home/vagrant/id_rsa.pub
         dnf install -y net-snmp tmux mc wget tree git
       SHELL
     end
@@ -115,7 +149,7 @@ Vagrant.configure("2") do |config|
     # 5) OpenSUSE Leap 15
     #--------------------------------------------------------------------------
     config.vm.define "mihkel-opensuse" do |suse|
-      suse.vm.box = "generic/opensuse42"
+      suse.vm.box = "opensuse/Leap-15.5.x86_64" #ei kasuta 42 kuna seal on zypper ver 1.13 ja see ei toeta ansible auto functsiooni
       suse.vm.hostname = "mihkel-opensuse"
       suse.vm.network "public_network"
       suse.vm.network "private_network",
@@ -128,8 +162,12 @@ Vagrant.configure("2") do |config|
         vb.cpus = 2
         vb.memory = 2048
       end
-  
+      suse.vm.provision "file", 
+        source: "Keys/id_rsa.pub", 
+        destination: "/home/vagrant/id_rsa.pub"
       suse.vm.provision "shell", inline: <<-SHELL
+        cat /home/vagrant/id_rsa.pub >> /home/vagrant/.ssh/authorized_keys
+        rm /home/vagrant/id_rsa.pub
         zypper --non-interactive refresh
         zypper --non-interactive install net-snmp tmux mc wget tree git
       SHELL
