--- a/Vagrant_v2/vagrantfile
+++ b/Vagrant_v2/vagrantfile
@@ -76,7 +76,7 @@ Vagrant.configure("2") do |config|
       config.vm.provision "file", source: "ansible.cfg", destination: "/home/vagrant/.ansible.cfg"
     # Uuendused ja programmide installeerimnine
       ansible.vm.provision "shell", inline: <<-SHELL
-    #enne uuendusi kopeerin avaliku v6tme hilisemaks ligip22suks
+    #enne uuendusi kopeerin v6tmed hilisemaks ligip22suks
         cat /home/vagrant/id_rsa.pub >> /home/vagrant/.ssh/authorized_keys
         rm /home/vagrant/id_rsa.pub
         mv /home/vagrant/id_rsa /home/vagrant/.ssh/is_rsa
